tests/lean/structInst1.lean.expected.out
structInst1.lean:12:21-12:22: error: field 'x' has already been specified
f5 (c : C) (a : A) : C
f6 (c : C) (a : A) : A
